--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-cv-blog",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dmackeyward.github.io/react-cv-blog",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -34,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
